Cleanup contact us section

--- a/index.html
+++ b/index.html
@@ -1287,79 +1287,26 @@
 
     <!-- ==== SECTION DIVIDER6 ==== -->
     <section class="section-divider textdivider divider6">
-        <div class="layer6">
+        <div class="layer6" id="contact" name="contact">
             <h1>HECHO EN LA CIUDAD DE MÉXICO.</h1>
             <hr>
-            <p>Av. Juan de Dios Bátiz, Esq. Miguel Othón de Mendizábal</p>
-            <p>Col. Nueva Industrial Vallejo</p>
-            <p>Delegación Gustavo A. Madero.</p>
-            <!--<p>5729 6000 | ext 56525, 56576</p>
-            <p><a class="icon icon-twitter" href="#"></a> | <a class="icon icon-facebook" href="#"></a></p>-->
-        </div>
-        <!-- container -->
-    </section>
-    <!-- section -->
-
-    <div class="container" id="contact" name="contact">
-        <div class="row">
-            <br>
-            <h1 class="centered">GRACIAS POR VISITARNOS</h1>
+              <p>
+                <span class="icon icon-home"></span> Av. Juan de Dios Bátiz, Esq. Miguel Othón de Mendizábal,<br/> Col. Nueva Industrial Vallejo, Delegación Gustavo A. Madero. CDMX
+              </p>
+              <p>
+                <span class="icon icon-phone"></span> 5729 6000 <br/>
+              </p>
+              <p>
+                <span class="icon icon-envelop"></span> <a href="mailto:contacto@deepdaemon.org?Subject=Contacto"> contacto@deepdaemon.org</a> <br/>
+              </p>
+            <p><a class="icon icon-twitter" href="#"></a> | <a class="icon icon-facebook" href="#"></a></p>
             <hr>
-            <br>
-            <br>
-            <div class="col-lg-6">
-                <h3>Información de Contacto</h3>
-                <p><span class="icon icon-home"></span> Av. Juan de Dios Bátiz, Esq. Miguel Othón de Mendizábal, Col. Nueva Industrial Vallejo, Delegación Gustavo A. Madero. CDMX<br/>
-                    <!--<span class="icon icon-phone"></span> 5729 6000 | ext 56525<br/>
-                    <span class="icon icon-phone"></span> 5729 6000 | ext 56576<br/>-->
-                    <span class="icon icon-envelop"></span> <a href="#"> contacto@deepdaemon.org</a> <br/>
-                </p>
-            </div>
-            <!-- col -->
-
-            <div class="col-lg-6">
-                <h3>Contacto</h3>
-                <p>Dejanos tus dudas o sugerencias, nos interesa tu opinión</p>
-                <p>
-                    <form class="form-horizontal" role="form">
-                        <div class="form-group">
-                            <label for="inputEmail1" class="col-lg-4 control-label"></label>
-                            <div class="col-lg-10">
-                                <input type="email" class="form-control" id="inputEmail1" placeholder="Email">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="text1" class="col-lg-4 control-label"></label>
-                            <div class="col-lg-10">
-                                <input type="text" class="form-control" id="text1" placeholder="Nombre">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-lg-10">
-                                <button type="submit" class="btn btn-success">Enviar</button>
-                            </div>
-                        </div>
-                    </form>
-                    <!-- form -->
-                </p>
-            </div>
-            <!-- col -->
-
-            <!--<div class="col-lg-4">
-                <h3>Support Us</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-            </div>-->
-            <!-- col -->
-
+            <h1 class="centered">GRACIAS POR VISITARNOS</h1>
         </div>
-        <!-- row -->
-
-    </div>
-    <!-- container -->
-
+    </section>
     <div id="footerwrap">
         <div class="container">
-            <h4>Creado por <a href="http://blacktie.co">Deep Daemon</a> - Copyright 2018</h4>
+            <h4>Creado por <a href="http://deepdaemon.org">Deep Daemon</a> - Copyright 2019</h4>
         </div>
     </div>
 
