Added team members

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
     <link href="assets/css/main.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/icomoon.css">
     <link href="assets/css/animate-custom.css" rel="stylesheet">
-
-
-
+    
+    <link href="https://fonts.googleapis.com/css?family=Exo+2:300,400,700,300italic,400italic" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
 
@@ -690,6 +689,53 @@
                     <a href="www.linkedin.com/in/victor-eugenio-hernández-ramos-01340061" target="_blank" class="fab fa-linkedin"></a>
                     <a href="mailto:victor.hernandez@deepdaemon.org" class="fas fa-envelope" target="_top"></a>
                     <p>Ingeniero en Informática (IPN-UPIICSA), con experiencia en herramientas de BI, SMBD, futuro Científico de Datos e investigador en Deep y Machine learning.</p>
+                </div>
+                <!--Salvador-->
+                <div class="col-lg-3 centered">
+                    <a data-toggle="modal" href="#Modal_Salvador">
+                    <img class="img img-circle" src="assets/img/team/Small/Salvador.jpg" height="150px" width="150px" alt="">
+                </a>
+                    <br>
+                    <h4><b>Salvador Paz Santos</b></h4>
+                    <h5><b>Estudiante | ESCOM IPN</b></h5>
+                    <a href="#ProyectoAero">
+                        <h5>Modelado de Aerogeneradores</h5>
+                    </a>
+                    <a href="https://www.linkedin.com/in/salvadorpaz" target="_blank" class="fab fa-linkedin"></a>
+                    <a href="mailto:salvador.paz@deepdaemon.org" class="fas fa-envelope" target="_top"></a>
+                    <p>Estudiante de Ingeniería en Sistemas Computacionales, apasionado por la Inteligencia Artificial y la Astronomía.</p>
+                </div>
+                <!--Jennifer-->
+                <div class="col-lg-3 centered">
+                    <a data-toggle="modal" href="#Modal_Jennifer">
+                    <img class="img img-circle" src="assets/img/team/Small/Jennifer.jpg" height="150px" width="150px" alt="">
+                </a>
+                    <br>
+                    <h4><b>Jennifer Pineda Aburto</b></h4>
+                    <h5><b>Estudiante | ESCOM IPN</b></h5>
+                    <a href="#ProyectoAero">
+                        <h5>Modelado de Aerogeneradores</h5>
+                    </a>
+                    <a href="https://www.linkedin.com/" target="_blank" class="fab fa-linkedin"></a>
+                    <a href="mailto:jennifer.pineda@deepdaemon.org" class="fas fa-envelope" target="_top"></a>
+                    <p>---</p>
+                </div>
+            </div>
+            <div class="row">
+                <!--Damian-->
+                <div class="col-lg-3 centered">
+                    <a data-toggle="modal" href="#Modal_Damian">
+                    <img class="img img-circle" src="assets/img/team/Small/Damian.jpg" height="150px" width="150px" alt="">
+                </a>
+                    <br>
+                    <h4><b>Damián Amaury García García</b></h4>
+                    <h5><b>Estudiante | ESCOM IPN</b></h5>
+                    <a href="#ProyectoAero">
+                        <h5>Modelado de Aerogeneradores</h5>
+                    </a>
+                    <a href="https://www.linkedin.com/" target="_blank" class="fab fa-linkedin"></a>
+                    <a href="mailto:damian.garcia@deepdaemon.org" class="fas fa-envelope" target="_top"></a>
+                    <p>---</p>
                 </div>
             </div>
 
