Added Aerogenerador project

--- a/index.html
+++ b/index.html
@@ -242,14 +242,13 @@
                 </div>
                 <!-- /col -->
 
-                <!-- PORTFOLIO IMAGE 3 -->
                 <div class="col-md-4">
                     <div class="grid mask">
                         <figure>
-                            <img class="img-responsive" src="assets/img/portfolio/Code.jpg" alt="">
+                            <img class="img-responsive" src="assets/img/portfolio/aerogenerador.jpg" alt="">
                             <figcaption>
-                                <h5>ANDROID PAGE</h5>
-                                <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
+                                <h5>Modelado de turbina de viento</h5>
+                                <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Ver más</a>
                             </figcaption>
                             <!-- /figcaption -->
                         </figure>
