Corrected jpg to png extension

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 <div class="col-md-4">
                     <div class="grid mask">
                         <figure>
-                            <img class="img-responsive" src="assets/img/portfolio/aerogenerador.jpg" alt="">
+                            <img class="img-responsive" src="assets/img/portfolio/aerogenerador.png" alt="">
                             <figcaption>
                                 <h5>Modelado de turbina de viento</h5>
                                 <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Ver más</a>
